Testing navigation overflow fix.

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -55,7 +55,11 @@ body.edit .widget.navigation, body.edit .widget.extendednavigation {
 
 .bk-pt-default .main {
   //padding-top: 6em;
-  min-height: 600px;
+  min-height: 640px;
+
+  @media @tablet {
+    min-height: 300px;
+  }
 }
 
 .bk-pt-homepage,
